# repro1258

./: .bazelrc  .travis.yml  WORKSPACE
test/: BUILD.bazel
tools/: bazel-2.1.1-installer-linux-x86_64.sh.sha256
tools/workspace/: github.bzl
